--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,11 +1,11 @@
 body {
-    background: white;
+    background: #F2F4F7;
 }
 
 .box-one {
     /* margin: -28px -28px -28px -28px; */
     margin-bottom:0px ;
-    background-color: #5480c1;
+    background-color: #F2F4F7   ;
     line-height: 1.34;
     color: #0b0b0b;
     width: 548px;
@@ -18,27 +18,121 @@ body {
     margin: -28px;
     width: 320.94px;
     height: 106px;
-    padding-top: 112px;
+    padding-top: 72px;
 
 }
 
 .Texto{
     padding-top: 16px;
+    font-family: Helvetica;
+    font-size: 28px;
+    font-weight: normal;
+    line-height: 32px;
 }
 
 .box-tow {
+    background-color:white;
     width: 396px;
     height:     314.156px;
-    padding:8px 44px  ;
+    padding:8px 16px;
     box-sizing: border-box;
-    display: flex;
+    
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+        border-radius: 6px;
 }
 
 .Correo{
-    width: 100%;
+    
+    width: 330px;
     height:     22px;
-    padding: 14px 14px;
-    padding: 16px 16px;
-   
+    margin-bottom: 10px;
+    padding: 14px 16px;
+    border: 1px solid; color: #dddfe2;
+    border-radius: 6px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 400; 
+}
+.main-box{
+    margin: 130px;
+    padding: 20px;
+    width: 100%;
+    height: 496px;
+}
+.principal{
+    display: flex;
+}
+.clave{
+    width: 330px;
+    height: 22px;
+    margin-bottom: 10px;
+    padding: 14px 16px;
+    border: 1px solid; color: #dddfe2;
+    border-radius: 6px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 400; 
+}
+.Boton{
+    width: 362px;
+    height: 48px;
+    background-color: #1877F2;
+    color: #F2F4F7  ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 600;  
+border-radius: 6px;
+border: none;
+    
+}
+
+.Link{
+    color: #0866ff;
+    height:     22px;
+    margin-bottom: 10px;
+    vertical-align: inherit;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 400; 
+    padding-top: 16px;
+}
+.Boton2{
+
+    
+    width: 190px;
+    height: 50px;
+    background-color: #36A420;
+    color: #F2F4F7  ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 600;  
+    border-radius: 6px;
+    border: none;
+    margin: 0px 87px;
+}
+.Linea{
+    border: none;
+    border-bottom: 1PX #dddfe2 solid;
+    width: 335px;
+    height: 0.74;
+    margin: 20px 16px;
+}
+.Textof{
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 14px; 
+    font-family: Arial, Helvetica, sans-serif;
+        margin-bottom: 10px;
+}
+.x{
+ font-size: 14px; 
+}
+
+.box-thre{
+ margin: 28px 0px;
 }
