--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -34,7 +34,7 @@ body {
     background-color:white;
     width: 396px;
     height:     314.156px;
-    padding:8px 16px;
+    padding:8px 12px;
     box-sizing: border-box;
     
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -42,8 +42,8 @@ body {
 }
 
 .Correo{
-    
-    width: 330px;
+   
+    width: 335px;
     height:     22px;
     margin-bottom: 10px;
     padding: 14px 16px;
@@ -57,13 +57,14 @@ body {
     margin: 130px;
     padding: 20px;
     width: 100%;
-    height: 496px;
-}
+    height:100px;
+    background: #F2F4F7;
+    }
 .principal{
     display: flex;
 }
 .clave{
-    width: 330px;
+    width: 335px;
     height: 22px;
     margin-bottom: 10px;
     padding: 14px 16px;
@@ -74,7 +75,7 @@ body {
     font-weight: 400; 
 }
 .Boton{
-    width: 362px;
+    width: 367px;
     height: 48px;
     background-color: #1877F2;
     color: #F2F4F7  ;
@@ -85,6 +86,7 @@ border-radius: 6px;
 border: none;
     
 }
+
 
 .Link{
     color: #0866ff;
@@ -112,7 +114,7 @@ border: none;
     font-weight: 600;  
     border-radius: 6px;
     border: none;
-    margin: 0px 87px;
+    margin: 0px 96px;
 }
 .Linea{
     border: none;
@@ -135,4 +137,78 @@ border: none;
 
 .box-thre{
  margin: 28px 0px;
+}
+.Y{
+    color: #737373;
+    width: 980px;
+    display: flex;
+    direction: ltr; 
+}
+.box-four{
+        /* margin: -28px -28px -28px -28px; */
+    margin-bottom:0px ;
+    background-color: #F2F4F7   ;
+    line-height: 1.34;
+    color: #0b0b0b;
+    width: 548px;
+    height: 298.073px;
+    padding: px 0px   ;
+}
+
+.z {
+  width: 979.989;
+  height: 136.539;
+  margin-top: 112px;
+  font-family: Helvetica, Arial, sans;
+  font-size: 12px;
+  margin-left: -22px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  text-decoration: none;
+  unicode-bidi: isolate;
+  padding: 25px  0px 0px 0px;
+  
+}
+
+.x {
+  margin-left: 20px;
+  text-decoration: none;
+  color: #737373;
+  font-size: 11px;
+}
+
+.cajafina2 {
+  padding: 8px;
+  font-family: Helvetica, Arial, sans;
+  font-size: 10px;
+  margin-left: -30px;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin-right: 250px;
+  line-height: 1.6;
+}
+
+.letraf {
+  padding-top: 30px;
+  display: flex;
+  justify-content: left;
+  margin: 20px -660px;
+ 
+}
+.Linea2{
+    border: none;
+    border-bottom: 1PX #dddfe2 solid;
+    width: 970px;
+    height: 0.74;
+    margin: 20px 0px;
+    
+}
+.footer{
+    background-color: white;
+    margin: 200px -200px;
+    padding: -0px 200px;
+    height: -100% ;
 }
